update one day tasks
